2024-02-08T08:17:55Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/7826697027 # 97
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2024-02-08
* notice: last 14d: unq all: 19 157
* notice: prev accum: outdated-unq outdated-all / unq all: 556 2889 / 577 3058
* notice: next accum: outdated-unq outdated-all / unq all: 557 2901 / 577 3058
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2024-01-25] / []

2024-02-07T16:19:35Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/7817863220 # 95
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2024-02-07
* notice: last 14d: unq all: 20 169
* notice: prev accum: outdated-unq outdated-all / unq all: 552 2868 / 576 3054
* notice: next accum: outdated-unq outdated-all / unq all: 556 2889 / 577 3058
* notice: prev exec diff / last date diff / accum: unq all: +1 +4 -0 -0 / +1 +4 -0 -0 / 1 4
* notice: removed / changed dates: [2024-01-24] / [2024-02-07]

2024-02-07T01:02:16Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/7808370077 # 93
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2024-02-07
* notice: last 14d: unq all: 22 185
* notice: prev accum: outdated-unq outdated-all / unq all: 552 2868 / 575 3052
* notice: next accum: outdated-unq outdated-all / unq all: 552 2868 / 576 3054
* notice: prev exec diff / last date diff / accum: unq all: +1 +2 -1 -1 / +3 +5 -0 -0 / 3 5
* notice: removed / changed dates: [] / [2024-01-24 2024-02-06]

2024-02-06T16:18:00Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/7802759331 # 92