@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2024-02-08T08:17:55Z",
-  "count_outdated" : 2901,
-  "uniques_outdated" : 557,
+  "timestamp" : "2024-02-10T01:02:11Z",
+  "count_outdated" : 2967,
+  "uniques_outdated" : 561,
   "count" : 3058,
   "uniques" : 577,
   "views" : [
-    {
-      "timestamp": "2024-01-26T00:00:00Z",
-      "count": 66,
-      "count_minmax": [ 5, 66 ],
-      "count_decinc": [ 0, 66 ],
-      "uniques": 4,
-      "uniques_minmax": [ 1, 4 ],
-      "uniques_decinc": [ 0, 4 ]
-    },
     {
       "timestamp": "2024-01-27T00:00:00Z",
       "count": 34,
